--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ version = "0.1.0"
 
 [dependencies]
 log = {version = "^0.4"}
-parserc = {version = "^0.5"}
+parserc = {version = "^0.5", optional = true}
 serde = {version = "^1", optional = true}
 thiserror = "^2"
 
@@ -18,6 +18,8 @@ divan = {version = "^0.1"}
 pretty_env_logger = {version = "^0.5"}
 
 [features]
-default = ["serde"]
+default = ["serde", "lang"]
 
 serde = ["dep:serde"]
+
+lang = ["parserc"]
