--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ thiserror = "^2"
 [dev-dependencies]
 divan = {version = "^0.1"}
 pretty_env_logger = {version = "^0.5"}
+unindent = "0.2.4"
 
 [features]
 default = ["serde", "lang"]
