--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,10 +18,10 @@ jobs:
         with:
           command: build
           args: --release --all-features
-      # - uses: actions-rs/cargo@v1
-      #   with:
-      #     command: test
-      #     args: --all-features
+      - uses: actions-rs/cargo@v1
+        with:
+          command: test
+          args: --all-features
   build_on_windows:
     name: Windows
     runs-on: windows-latest
