--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ serde = {version = "^1", optional = true}
 thiserror = "^2"
 
 [dev-dependencies]
+bendy = {version = "^0.3", features = ["std", "serde"]}
 divan = {version = "^0.1"}
 pretty_env_logger = {version = "^0.5"}
 serde_json = "1.0.140"
