--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ thiserror = "^2"
 [dev-dependencies]
 bendy = {version = "^0.3", features = ["std", "serde"]}
 divan = {version = "^0.1"}
+flexbuffers = "25.2.10"
 pretty_env_logger = {version = "^0.5"}
 serde_json = "1.0.140"
 unindent = "0.2.4"
