--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ bendy = {version = "^0.3", features = ["std", "serde"]}
 divan = {version = "^0.1"}
 flexbuffers = "25.2.10"
 pretty_env_logger = {version = "^0.5"}
+serde-lexpr = "0.1.3"
 serde_json = "1.0.140"
 unindent = "0.2.4"
 
