--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,30 +1,3 @@
-[package]
-description = "A group of graphical interface description languages that separates style/class from behavior and layout"
-documentation = "https://docs.rs/stylang"
-edition = "2024"
-license = "MIT"
-name = "stylang"
-repository = "https://github.com/styles-lab/stylang"
-version = "0.1.0"
-
-[dependencies]
-log = { version = "^0.4" }
-parserc = { version = "^0.9", optional = true }
-serde = { version = "^1", optional = true }
-thiserror = "^2"
-
-[dev-dependencies]
-bendy = { version = "^0.3", features = ["std", "serde"] }
-divan = { version = "^0.1" }
-flexbuffers = "25.2.10"
-pretty_env_logger = { version = "^0.5" }
-serde-lexpr = "0.1.3"
-serde_json = "1.0.140"
-unindent = "0.2.4"
-
-[features]
-default = ["serde", "lang"]
-
-serde = ["dep:serde"]
-
-lang = ["parserc"]
+[workspace]
+resolver = "3"
+members = ["crates/*"]
